--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,8 @@
   <meta name="apple-mobile-web-app-title" content="pbl_if14">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
+  <!-- TODO: Add your Google Maps API key here -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBqHs_tZiI-HiD_NfF_r148Dx0FXwvnkKs"></script>
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png">
 
